# cvedata

./: .buildinfo  .gitignore  MANIFEST.in  README.html  README.md  auth_tweepy.py  build_researcher_twitter_lists.py  genindex.html  intro.html  objects.inv  requirements-dev.txt  search.html  searchindex.js  setup.cfg  update_data.py  using_generated_data.html
.github/workflows/: check-version.yml  deploy-book-from-latest-release.yml  python-release-publish.yml
_sources/: README.md  intro.md  using_generated_data.ipynb
_sources/analysis/: msrc_cve_to_bins.ipynb  win_verinfo.ipynb
_sources/book/: generated.md  metadata.md
_sources/charts/: GOAT_researcher_cve_quantity.ipynb
analysis/: metagen.html  ms_kbs.html  msrc_cve_to_bins.html  win_verinfo.html
book/: generated.html  metadata.html
book/msrc_pandas/: 2016-Apr-pandas.html  2016-Aug-pandas.html  2016-Dec-pandas.html  (+77 more)
charts/: GOAT_researcher_cve_quantity.html
cve_data/: __init__.py  __main__.py  acknowledgements.py  chromerelease.py  win_bin_map.py
cvedata/: __init__.py  __main__.py  acknowledgements.py  chromerelease.py  config.py  cvrf.py  cwe.py  download.py  known_ack_to_twitter.py  known_tag_to_bin.py  metadata.py  ms_feed_kbs.py  msrc_cve_to_bins.py  msrc_cvrf.py  msrc_known_bins.py  msrc_pandas.py  msrc_tags.py  nist.py  tags_to_bins.py  update.py  util.py  version.py  win_bin_map.py  win_verinfo.py  winbindex.py
docs/: README.md  _config.yml  _toc.yml  create_books.py  requirements.txt  using_generated_data.ipynb
tests/: test_nist.py
twitter_list/: build_researcher_twitter_lists.py
(+132 files in other folders)
