[metadata]
name = cvedata
author = clearbluejar
author_email = clearbluejar
version = attr:cvedata.__version__
description = A collection of CVE and related data
long_description_content_type = text/markdown
long_description = file:README.md
license = MIT
license_files =
    LICENSE
    NOTICE
url = https://github.com/clearbluejar/cvedata
keywords = cve, cvedata, research, vulnerabilities
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    xmltodict
    beautifulsoup4


[tool:pytest]
testpaths = tests
addopts =
    -p no:faulthandler